cabal-version:      3.4

name:               coro
version:            0.1.0.0

license:            MIT
license-file:       LICENSE

author:             Oleg Shatov
maintainer:         oleg@kek.today

category:           Control
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    exposed-modules:
        Contr.Cont
        , Contr.Coro.Scheduler
        , Contr.Coro.Coroutine
        , Contr.Coro.Runtime
    build-depends:
        base ^>= 4.19
        , transformers ^>= 0.6
    hs-source-dirs: src
    default-language: Haskell2010

test-suite coro-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:
      coro
      , base ^>=4.19
      , transformers ^>= 0.6
      , tasty ^>= 1.5
      , tasty-hunit ^>= 0.10
    hs-source-dirs:   test
    default-language: Haskell2010

executable coro
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    coro
                    , base ^>= 4.19
                    , transformers ^>= 0.6

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
